[修改] 抽離 Home genres swiper 並將其套用至 MovieDetail 內的 swiper

--- a/src/scss/components/_btns.scss
+++ b/src/scss/components/_btns.scss
@@ -13,11 +13,11 @@
     border-radius: map-get($border-radius, base);
 
     @include lg {
-      @include text(lg);
+      @include text(base);
     }
 
     @include md {
-      @include text(base);
+      @include text(sm);
     }
 
     @include sm {
@@ -35,7 +35,6 @@
 
   &--sm {
     @include text(base);
-    // padding: 0.5em 0.75em;
     padding: 0.75em 1em;
     border-radius: map-get($border-radius, base);
 
