--- a/src/scss/base/_global-styles.scss
+++ b/src/scss/base/_global-styles.scss
@@ -83,6 +83,10 @@ main {
     @include md {
         @include text(3xl);
     }
+
+    @include sm {
+        @include text(2xl);
+    }
 }
 
 // 用於無內容時的文字大小
@@ -113,6 +117,7 @@ main {
         }
     }
 
+    // genres 容器
     &-wrapper {
         @include flex($wrap: wrap);
         row-gap: 0.75rem;
