--- a/src/scss/page/_MovieDetail.scss
+++ b/src/scss/page/_MovieDetail.scss
@@ -4,15 +4,26 @@
   position: relative;
 
   //* 共通樣式設定
-  // 除了首個 section(.movie-detail__intro) 之外，其餘的 sectioni 都套用以下樣式:
+  // 除了首個 section 之外，其餘的 sectioni 都套用以下樣式:
   > section:not(:first-child) {
     margin-top: 7rem;
+
+    @include md {
+      margin-top: 5rem;
+    }
+
+    @include sm {
+      margin-top: 3rem;
+    }
   }
 
   .layout-title {
-    padding-bottom: 2rem;
-    margin-bottom: 2rem;
-    border-bottom: 1px solid map-get($color, light-gray);
+  }
+  
+  &__layout-content{
+    margin-top: 1.5rem;
+    padding-top: 2rem;
+    border-top: 1px solid map-get($color, light-gray);
   }
 
   //* 頂部介紹區塊
@@ -22,6 +33,22 @@
 
     @include lg {
       height: auto;
+    }
+
+    .container {
+      @include flex($ai: center);
+      @include x-spacing;
+      grid-column: 1/2;
+      grid-row: 1/2;
+
+      @include lg {
+        flex-direction: column;
+        margin-top: 6rem;
+      }
+
+      @include md {
+        margin-top: 5.5rem;
+      }
     }
   }
 
@@ -56,29 +83,6 @@
       width: 100%;
       height: 100%;
       background-image: linear-gradient(rgba(0, 0, 0, 0.033), rgb(0, 0, 0));
-    }
-  }
-
-  &__content {
-    @include flex;
-    @include x-spacing;
-    grid-column: 1/2;
-    grid-row: 1/2;
-
-    @include lg {
-      margin-top: 6rem;
-    }
-
-    @include md {
-      margin-top: 5.5rem;
-    }
-
-    .container {
-      @include flex($ai: center);
-
-      @include lg {
-        flex-direction: column;
-      }
     }
   }
 
@@ -153,6 +157,9 @@
     }
   }
 
+  &__genres-tag {
+  }
+
   //* 文字介紹
   &__overview {
     @include text(xl);
@@ -163,27 +170,42 @@
 
     @include sm {
       @include text(lg);
+      margin-top: 0.5em;
     }
   }
 
-  // 按鈕 (Watch Video & Add Watchlist)
+  //* 按鈕 (Watch Video & Add Watchlist)
   &__btns {
     @include flex;
-    // margin-top: 1rem;
 
     @include lg {
       order: 4;
     }
+
+    @include sm {
+      margin-top: 1rem;
+      flex-direction: column;
+    }
   }
 
+  // 單一按鈕
   &__btn {
     align-self: flex-start;
+
+    @include sm {
+      width: 100%;
+    }
 
     &:not(:first-child) {
       margin-left: 2.5rem;
 
       @include lg {
         margin-left: 1rem;
+      }
+
+      @include sm {
+        margin-left: 0;
+        margin-top: 1rem;
       }
     }
 
@@ -241,6 +263,7 @@
       }
     }
 
+    // 演員列表卡片容器
     &-cards {
       @include flex($wrap: wrap);
       row-gap: 2rem;
@@ -265,6 +288,7 @@
       }
     }
 
+    // 演員列表卡片
     &-card {
       @include flex($ai: center);
       width: 100%;
@@ -325,7 +349,7 @@
     @include x-spacing;
   }
 
-  &__iframe-container {
+  &__iframe-content {
     position: relative;
     width: 100%;
     padding-bottom: 56.25%;
