--- a/src/scss/abstracts/_mixin.scss
+++ b/src/scss/abstracts/_mixin.scss
@@ -64,22 +64,21 @@
 
 //* 將某一個元素的所有直系子元素出現時加上淡入效果
 // - 需使用 .appear 來加進該元素當中才會觸發效果
-@mixin elem-appear($amount) {
-  // 選中某個元素的所有的直系子層
+@mixin transition-appear($amount) {
+  // 選中元素的所有的直系子層
   & > :nth-child(n) {
     opacity: 0;
-    transform: translateY(1.25rem);
-    transition: map-get($transition, 800), map-get($transition, 800);
+    transform: translateY(-1.25rem);
+    transition: map-get($transition, 800), map-get($transition, 1000);
     transition-property: transform, opacity;
   }
-
-  // 按照 $i 數量依序增加 transition-delay
+  // 按照直系子層數量 $i，依序增加 transition-delay
   @for $i from 1 through $amount {
     & > :nth-child(#{$i}) {
-      transition-delay: $i * 150ms;
+      transition-delay: $i * 150ms, $i * 200ms;
     }
   }
-
+  // 出現時樣式
   &.appear {
     & > :nth-child(n) {
       opacity: 1;
@@ -87,19 +86,3 @@
     }
   }
 }
-
-//@mixin expand-layout($max-height) {
-//   overflow-y: hidden;
-//   max-height: $max-height;
-
-//   // 遮蓋層
-//   &::before {
-//     content: "";
-//     position: absolute;
-//     bottom: 0;
-//     width: 100%;
-//     height: 100%;
-//     transition: opacity map-get($transition, 500);
-//     background-image: linear-gradient(to bottom, transparent, black);
-//   }
-// }
