--- a/src/scss/page/_MovieDetail.scss
+++ b/src/scss/page/_MovieDetail.scss
@@ -102,6 +102,7 @@
   //* 文字區域
   &__texts {
     @include flex($dir: column, $jc: center);
+    @include transition-appear(5);
     margin-left: 4rem;
     row-gap: 1rem;
     height: 100%;
@@ -121,27 +122,6 @@
       margin-top: 2rem;
     }
 
-    // 選中所有的直系子層
-    & > :nth-child(n) {
-      opacity: 0;
-      transform: translateY(20px);
-      transition: map-get($transition, 800), map-get($transition, 800);
-      transition-property: transform, opacity;
-    }
-
-    // 按照 index 依序 transition-delay
-    @for $i from 1 through 5 {
-      & > :nth-child(#{$i}) {
-        transition-delay: $i * 150ms;
-      }
-    }
-
-    &.appear {
-      & > :nth-child(n) {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
   }
 
   //* 電影名稱(標題)
