--- a/src/scss/animation/_animation.scss
+++ b/src/scss/animation/_animation.scss
@@ -18,11 +18,11 @@
 @keyframes in-view {
   0% {
     opacity: 0;
-    transform: translateY(30px);
+    transform: translateY(1.875rem);
   }
 
   30% {
-    transform: translateY(30px);
+    transform: translateY(1.875rem);
   }
 
   100% {
