--- a/src/scss/base/_global-styles.scss
+++ b/src/scss/base/_global-styles.scss
@@ -105,7 +105,7 @@ main {
     font-weight: bold;
     color: map-get($color, secondary);
     background-color: map-get($color, primary);
-    border-radius: 30px;
+    border-radius: 1.875rem;
 
     @include md {
         @include text(xs);
@@ -143,7 +143,7 @@ main {
         &::before {
             content: "";
             display: block;
-            width: 1px;
+            width: .0625rem;
             height: 100%;
             background-color: map-get($color, primary-dark);
         }
