--- a/src/scss/components/_Header.scss
+++ b/src/scss/components/_Header.scss
@@ -176,7 +176,7 @@
       text-align: center;
       width: 100%;
       height: 100%;
-      padding: 12px;
+      padding: .75rem;
       max-width: 1.375rem;
       max-height: 1.375rem;
       color: map-get($color, primary);
