--- a/src/scss/base/_global-styles.scss
+++ b/src/scss/base/_global-styles.scss
@@ -49,6 +49,7 @@ h6 {
 
 main {
     min-height: calc(100% - deep-map-get($height, header, lg));
+    padding-bottom: 3rem;
 }
 
 .container {
@@ -80,7 +81,7 @@ main {
 .layout-title {
     @include text(4xl);
 
-    @include md {
+    @include lg {
         @include text(3xl);
     }
 
@@ -132,7 +133,7 @@ main {
 
     @include sm {
         @include text(sm);
-        column-gap: 1rem;
+        column-gap: 8px;
     }
 
     // 除了首個子層以外，其餘皆套用以下樣式
@@ -143,7 +144,7 @@ main {
         &::before {
             content: "";
             display: block;
-            width: .0625rem;
+            width: 0.0625rem;
             height: 100%;
             background-color: map-get($color, primary-dark);
         }
@@ -152,7 +153,7 @@ main {
             margin-left: 1.5rem;
 
             @include sm {
-                margin-left: 0.75rem;
+                margin-left: 0.5rem;
             }
         }
     }
@@ -160,12 +161,6 @@ main {
     // info 內的 icon 統一設定 margin-right
     i {
         margin-right: 0.5rem;
-    }
-}
-
-.vote {
-    i {
-        // margin-left: 0.5rem;
     }
 }
 
