--- a/src/scss/page/_MovieDetail.scss
+++ b/src/scss/page/_MovieDetail.scss
@@ -24,6 +24,9 @@
 
   .layout-title {
     @include flex;
+    padding-bottom: 1.5rem;
+    border-bottom: 1px solid map-get($color, light-gray);
+
     &::before {
       content: "";
       display: block;
@@ -33,10 +36,9 @@
     }
   }
 
+  // 各區塊內容區
   &__layout-content {
     margin-top: 1.5rem;
-    padding-top: 2rem;
-    border-top: 1px solid map-get($color, light-gray);
   }
 
   //* 頂部介紹區塊
@@ -73,7 +75,7 @@
     position: relative;
     z-index: -1;
     width: 100%;
-    max-height: 90vh;
+    max-height: 60vh;
 
     @include lg {
       align-self: flex-start;
@@ -336,11 +338,6 @@
     }
   }
 
-  //* Video
-  &__video {
-    // @include x-spacing;
-  }
-
   &__iframe-content {
     position: relative;
     width: 100%;
@@ -358,8 +355,6 @@
     width: 100%;
     height: 100%;
     border: 0;
-    // 
-    margin-top: 2rem;
   }
 
   //* Similar Movies
