--- a/src/scss/page/_MovieDetail.scss
+++ b/src/scss/page/_MovieDetail.scss
@@ -74,7 +74,7 @@
     position: relative;
     z-index: -1;
     width: 100%;
-    max-height: 60vh;
+    max-height: 85vh;
 
     @include lg {
       align-self: flex-start;
@@ -88,6 +88,7 @@
       object-position: top;
     }
 
+    // backdrop 遮蓋層
     &::before {
       content: "";
       position: absolute;
@@ -96,7 +97,7 @@
       z-index: 5;
       width: 100%;
       height: 100%;
-      background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgb(0, 0, 0));
+      background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgb(0, 0, 0));
     }
   }
 
@@ -104,7 +105,7 @@
   &__poster {
     border-radius: 0.9375rem;
     width: 100%;
-    max-width: 18.75rem;
+    max-width: 16.875rem;
     border-radius: map-get($border-radius, base);
     box-shadow: map-get($box-shadow, base);
 
@@ -148,9 +149,6 @@
     @include md {
       @include text(3xl);
     }
-  }
-
-  &__genres-tag {
   }
 
   //* 文字介紹
