[修改] 將 changeWatchlist 函數獨立出來作重用 / 修正 genres-tag 重複的問題

--- a/src/scss/page/_MovieDetail.scss
+++ b/src/scss/page/_MovieDetail.scss
@@ -118,10 +118,11 @@
   &__texts {
     @include flex($dir: column, $jc: center);
     @include transition-appear(5);
-    margin-left: 4rem;
     row-gap: 1rem;
-    height: 100%;
+    margin-left: 4rem;
+    width: 100%;
     max-width: 56.25rem;
+    height: 100%;
 
     @include lg {
       margin-left: 0rem;
