--- a/src/scss/abstracts/_map.scss
+++ b/src/scss/abstracts/_map.scss
@@ -30,11 +30,14 @@ $max-width: (
 // color
 $color: (
   primary: #fff,
-  primary-dark: hsl(0, 0%, 50%),// 註: primary-dark 顏色 =  primary 的 hsl 降至 50%
+  primary-dark: hsl(0, 0%, 50%),
+  // 註: primary-dark 顏色 =  primary 的 hsl 降至 50%
   secondary: #000,
   // 半透明暗色背景
   overlay: rgba(0, 0, 0, 0.45),
   tertiary: rgb(213, 108, 80),
+  tertiary-light: hsl(13deg, 61%, 60%),
+  tertiary-dark: hsl(13, 61%, 55%),
   active: rgb(213, 108, 80),
   // #831e1e
   // 用於淡色底線
@@ -49,12 +52,12 @@ $x-spacing: (
 
 // box-shadow
 $box-shadow: (
-  base: 0 .625rem 1.25rem .1875rem #000000,
+  base: 0 0.625rem 1.25rem 0.1875rem #000000,
 );
 
 // border-radius
 $border-radius: (
-  base: .625rem,
+  base: 0.625rem,
 );
 
 $transition: (
