--- a/src/scss/page/_Search.scss
+++ b/src/scss/page/_Search.scss
@@ -39,7 +39,7 @@
   &__clear-text-btn {
     @include text(xl);
     position: absolute;
-    bottom: 0.5rem;
+    bottom: 0.625rem;
     right: 1.25rem;
     padding: 0;
 
@@ -60,7 +60,6 @@
 
   .auto-complete {
     position: absolute;
-    // top: -12px;
     z-index: -1;
     transform: translateY(-12px);
     padding-top: 12px;
@@ -85,6 +84,10 @@
 
       i {
         margin-right: 1rem;
+      }
+
+      span {
+        color: #00000078;
       }
 
       @include hover-query {
