--- a/src/scss/base/_global-styles.scss
+++ b/src/scss/base/_global-styles.scss
@@ -100,8 +100,8 @@ main {
 }
 
 .genres-tag {
-    @include text(sm);
-    padding: 0.25em 0.8em;
+    @include text(xs);
+    padding: 0.15em 0.8em;
     white-space: nowrap;
     font-weight: bold;
     color: map-get($color, secondary);
