--- a/src/scss/base/_global-styles.scss
+++ b/src/scss/base/_global-styles.scss
@@ -48,7 +48,7 @@ h6 {
 }
 
 main {
-    min-height: calc(100% - deep-map-get($height, header, lg));
+    min-height: 100%;
     padding-bottom: 1rem;
 }
 
