--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -7,20 +7,22 @@ $column-gap: 1.5rem;
 
 // 每列在特定斷點分別要容納幾張卡片?
 $card-amount: (
-  2xl: 5,
-  xl: 4,
-  lg: 3,
-  md: 2,
-  sm: 1,
+  default: 6,
+  xl: 5,
+  lg: 4,
+  md: 3,
+  sm: 2,
+  xs: 1,
 );
 
 // 每列在特定斷點分別有幾個 gap?
 $gap-amount: (
-  2xl: 4,
-  xl: 3,
-  lg: 2,
-  md: 1,
-  sm: 0,
+  default: 5,
+  xl: 4,
+  lg: 3,
+  md: 2,
+  sm: 1,
+  xs: 0,
 );
 
 //* 卡片容器
@@ -39,8 +41,24 @@ $gap-amount: (
 @mixin card($column-gap, $card-amount, $gap-amount) {
   width: 100%;
   max-width: calc(
-    (100% / map-get($card-amount, 2xl)) - ($column-gap * map-get($gap-amount, 2xl) / map-get($card-amount, 2xl))
+    (100% / map-get($card-amount, default)) -
+      ($column-gap * map-get($gap-amount, default) / map-get($card-amount, default))
   );
+  // max-width: calc(
+  //   (100% / map-get($card-amount, 2xl)) - ($column-gap * map-get($gap-amount, 2xl) / map-get($card-amount, 2xl))
+  // );
+
+  // @include xl {
+  //   max-width: calc(
+  //     (100% / map-get($card-amount, xl)) - ($column-gap * map-get($gap-amount, xl) / map-get($card-amount, xl))
+  //   );
+  // }
+
+  // @include lg {
+  //   max-width: calc(
+  //     (100% / map-get($card-amount, lg)) - ($column-gap * map-get($gap-amount, lg) / map-get($card-amount, lg))
+  //   );
+  // }
 
   @include xl {
     max-width: calc(
@@ -53,7 +71,6 @@ $gap-amount: (
       (100% / map-get($card-amount, lg)) - ($column-gap * map-get($gap-amount, lg) / map-get($card-amount, lg))
     );
   }
-
   @include md {
     max-width: calc(
       (100% / map-get($card-amount, md)) - ($column-gap * map-get($gap-amount, md) / map-get($card-amount, md))
@@ -61,7 +78,13 @@ $gap-amount: (
   }
 
   @include sm {
-    max-width: deep-map-get($card-size, width, sm);
+    max-width: calc(
+      (100% / map-get($card-amount, sm)) - ($column-gap * map-get($gap-amount, sm) / map-get($card-amount, sm))
+    );
+  }
+
+  @include xs {
+    max-width: deep-map-get($card-size, width, xs);
     margin-left: auto;
     margin-right: auto;
   }
@@ -74,64 +97,3 @@ $gap-amount: (
 .card {
   @include card($column-gap, $card-amount, $gap-amount);
 }
-
-// //@ 使用於 New, Popular, Genres, watchlist
-// // 每張卡片的寬度計算方式: (100% / 每列的卡片張數) - ((指定的 gap 大小 * gap 總數) / 每列的卡片張數)
-// // -->  (100% / $card-amount - ($column-gap * $gap-amount) / $card-amount)
-
-// // 卡片之間的 column-gap
-// $column-gap: 1.5rem;
-
-// // 每列要容納幾張卡片?
-// $card-amount: (
-//   2xl: 5,
-//   xl: 4,
-//   lg: 3,
-//   md: 2,
-//   sm: 1,
-// );
-
-// // 一列有幾個 gap?
-// $gap-amount: (
-//   2xl: 4,
-//   xl: 3,
-//   lg: 2,
-//   md: 1,
-//   sm: 0,
-// );
-
-// .cards {
-//   @include flex($wrap: wrap);
-//   gap: $column-gap;
-// }
-
-// .card {
-//   width: 100%;
-//   max-width: calc(
-//     (100% / map-get($card-amount, 2xl)) - ($column-gap * map-get($gap-amount, 2xl) / map-get($card-amount, 2xl))
-//   );
-
-//   @include xl {
-//     max-width: calc(
-//       (100% / map-get($card-amount, xl)) - ($column-gap * map-get($gap-amount, xl) / map-get($card-amount, xl))
-//     );
-//   }
-
-//   @include lg {
-//     max-width: calc(
-//       (100% / map-get($card-amount, lg)) - ($column-gap * map-get($gap-amount, lg) / map-get($card-amount, lg))
-//     );
-//   }
-
-//   @include md {
-//     max-width: calc(
-//       (100% / map-get($card-amount, md)) - ($column-gap * map-get($gap-amount, md) / map-get($card-amount, md))
-//     );
-//   }
-
-//   @include sm {
-//     max-width: deep-map-get($card-size, width, sm);
-//     margin-left: auto;
-//     margin-right: auto;
-//   }
-// }
