--- a/src/scss/page/_Home.scss
+++ b/src/scss/page/_Home.scss
@@ -101,6 +101,7 @@
     }
     // img tag (poster)
     &--poster {
+      display: none;
       @include md {
         display: inline-block;
       }
