--- a/src/scss/components/_Header.scss
+++ b/src/scss/components/_Header.scss
@@ -4,20 +4,17 @@
   @include flex($ai: center);
   position: fixed;
   z-index: 30;
+  padding-left: deep-map-get($x-spacing, lg);
+  padding-right: deep-map-get($x-spacing, lg);
   flex: 1 0 auto;
   width: 100%;
   height: deep-map-get($height, header, lg);
-
-  padding-left: deep-map-get($x-spacing, lg);
-  padding-right: deep-map-get($x-spacing, lg);
-
   transition: map-get($transition, 800);
   transition-property: outline, background-color;
-
   background-color: transparent;
   background-image: linear-gradient(to bottom, rgb(0 0 0 / 60%), transparent);
-  outline: 1px solid transparent;
   color: transparent;
+  outline: 1px solid transparent;
 
   &--black {
     background-color: map-get($color, secondary);
@@ -27,6 +24,14 @@
   @include md {
     justify-content: space-between;
     padding: 0 deep-map-get($x-spacing, sm);
+
+    // 螢幕 < md 時套用 hamburger bar @mixin
+    @include hamburger(
+      $width: 1.75rem,
+      $line-thickness: 0.125rem,
+      $line-gap: 0.375rem,
+      $line-color: map-get($color, primary)
+    );
   }
 
   @include sm {
@@ -48,47 +53,15 @@
     }
   }
 
+  // header__menu-btn
   &__menu-btn {
-    @include flex($dir: column, $jc: space-between);
-    @include button-reset();
     display: none;
-
-    div {
-      width: 1.75rem;
-      height: 0.125rem;
-      background-color: map-get($color, "primary");
-      pointer-events: none;
-      transition: map-get($transition, 300);
-      transition-property: transform, opacity;
-      pointer-events: none;
-
-      &:not(:first-child) {
-        margin-top: 0.375rem;
-      }
-    }
-
-    &.active div {
-      &:nth-child(1) {
-        transform: translateY(0.5rem) rotate(45deg);
-      }
-
-      &:nth-child(2) {
-        transform: rotate(0);
-        opacity: 0;
-      }
-
-      &:nth-child(3) {
-        transform: translateY(-0.5rem) rotate(-45deg);
-      }
-    }
-
-    i {
-      pointer-events: none;
-    }
+    @include button-reset;
+    width: 1.75rem;
 
     @include md {
       @include text(2xl);
-      display: block;
+      @include flex($dir: column);
       cursor: pointer;
       color: map-get($color, primary);
     }
@@ -176,7 +149,7 @@
       text-align: center;
       width: 100%;
       height: 100%;
-      padding: .75rem;
+      padding: 0.75rem;
       max-width: 1.375rem;
       max-height: 1.375rem;
       color: map-get($color, primary);
