--- a/src/scss/page/_Watchlist.scss
+++ b/src/scss/page/_Watchlist.scss
@@ -3,12 +3,9 @@
 .watchlist {
   @include main-layout;
 
+  // watchlist__header
   &__header {
     @include flex($ai: center, $jc: space-between);
-  }
-
-  &__cards {
-    margin-top: 4rem;
   }
 
   // 頂部切換連結容器
@@ -44,27 +41,56 @@
   }
 }
 
+//* .watchcards 卡片佈局設定
+// 卡片之間的 column-gap
+$column-gap: 1.5rem;
+// 每列在特定斷點分別要容納幾張卡片?
+$card-amount: (
+  default: 5,
+  xl: 4,
+  lg: 3,
+  md: 3,
+  sm: 2,
+);
+// 每列在特定斷點分別有幾個 gap?
+$gap-amount: (
+  default: 4,
+  xl: 3,
+  lg: 2,
+  md: 2,
+  sm: 1,
+);
+
+.watchcards {
+  @include cards($column-gap);
+}
+
 .watchcard {
   $block: &;
+  @include card($column-gap, $card-amount, $gap-amount);
   @include flex($dir: column);
-  position: relative;
   overflow: hidden;
   border-radius: map-get($border-radius, base);
   background-color: map-get($color, secondary);
   animation: scale map-get($transition, 500);
 
-  @include sm {
-    &:not(:first-child) {
-      margin-top: 2.5rem;
-    }
+  @include md {
+    position: relative;
+
+    // 螢幕 < md 時套用 hamburger bar @mixin
+    @include hamburger(
+      $width: 1rem,
+      $line-thickness: 0.125rem,
+      $line-gap: 0.1875rem,
+      $line-color: map-get($color, secondary)
+    );
   }
 
-  @include hover-query() {
+  @include hover-query {
     &:hover {
       &::before {
         opacity: 1;
       }
-
       #{$block} {
         &__title,
         &__btns {
@@ -74,27 +100,81 @@
     }
   }
 
+  // 卡片暗色遮蓋
   &::before {
     content: "";
     position: absolute;
     inset: 0;
-    display: block;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.45);
+    background-color: rgba(0, 0, 0, 0.7);
     opacity: 0;
-    transition: opacity 300ms ease-in-out;
-
-    @include sm {
-      display: none;
+    transition: map-get($transition, 300);
+    transition-property: opacity, visibility;
+    @include md {
+      visibility: hidden;
+      opacity: 0;
     }
   }
 
+  // watchcard option 開啟狀態
+  &--show-option {
+    // 僅在 breakpoint < md 時觸發
+    @include md {
+      // 控制 .watchcard__btns 內的每一個子元素位移
+      #{$block}__btns {
+        visibility: visible;
+        opacity: 1;
+        & > :nth-child(1) {
+          transform: translateX(-150%);
+        }
+        & > :nth-child(2) {
+          transform: translate(-125%, 125%);
+        }
+        & > :nth-child(3) {
+          transform: translateY(150%);
+        }
+      }
+      // 開啟暗色遮蓋
+      &::before {
+        opacity: 1;
+        visibility: visible;
+      }
+    }
+  }
+
+  // 切換 watchcard option 的按鈕(僅在 breakpoint < md 出現)
+  &__option-btn {
+    display: none;
+    @include button-reset();
+    @include text(base);
+    @include rounded-full;
+    position: absolute;
+    z-index: 11;
+    right: 5%;
+    top: 5%;
+    width: 2.1875rem;
+    height: 2.1875rem;
+    color: map-get($color, secondary);
+    background-color: map-get($color, primary);
+    cursor: pointer;
+
+    @include md {
+      display: flex;
+    }
+  }
+
+  // img 容器
   &__img {
     width: 100%;
     height: 100%;
+
+    img {
+      border-radius: map-get($border-radius, base);
+    }
   }
 
+  // poster
   &__movie-poster {
     object-fit: cover;
     object-position: center;
@@ -102,6 +182,7 @@
     height: 100%;
   }
 
+  // watchcard__content
   &__content {
     @include flex($dir: column, $jc: space-between);
     position: absolute;
@@ -109,7 +190,7 @@
     width: 100%;
     height: 100%;
 
-    @include sm {
+    @include md {
       position: static;
     }
 
@@ -118,6 +199,7 @@
     }
   }
 
+  // watchcard__title
   &__title {
     @include text(2xl);
     padding-top: 1.25rem;
@@ -134,20 +216,16 @@
     }
 
     @include md {
-      @include text(2xl);
-    }
-
-    @include sm {
-      @include text(2xl);
-      padding-top: 1rem;
-      padding-bottom: 1rem;
+      @include text(base);
+      margin-top: 1rem;
+      padding: 0;
       transform: none;
       transition: none;
-      color: map-get($color, secondary);
-      background-color: map-get($color, primary);
+      color: map-get($color, primary);
     }
   }
 
+  // watchcard__btns
   &__btns {
     @include flex;
     width: 100%;
@@ -157,14 +235,31 @@
     transition: map-get($transition, 300);
     transition-property: transform;
 
-    @include sm {
+    @include md {
+      position: absolute;
+      z-index: -1;
+      right: 5%;
+      top: 5%;
+      visibility: hidden;
+      opacity: 0;
+      width: auto;
+      border-top: 0;
       transform: none;
-      transition: none;
-      background-color: map-get($color, primary);
-      border-top: 1px solid map-get($color, secondary);
+      transition: map-get($transition, 300);
+      transition-property: visibility, opacity;
+      background-color: transparent;
+
+      // watchcard__btns 每個子層
+      @for $i from 1 through 3 {
+        & > :nth-child(#{$i}) {
+          transition: map-get($transition, 300);
+          transition-property: transform, opacity, visibility;
+        }
+      }
     }
   }
 
+  // watchcard__btn
   &__btn {
     @include flex($dir: column, $ai: center);
     @include text(xs);
@@ -174,8 +269,22 @@
     transition: map-get($transition, 300);
     transition-property: color, background-color;
 
-    &:not(:first-child) {
-      border-left: 1px solid;
+    @include md {
+      @include rounded-full;
+      @include flex($jc: center, $ai: center);
+      position: absolute;
+      right: 0;
+      width: 2.8125rem;
+      height: 2.8125rem;
+      font-size: 0;
+      background-color: map-get($color, tertiary);
+      // transition: map-get($transition, 300);
+      // transition-property: transform, opacity, visibility;
+    }
+
+    @include xs {
+      width: 2.5rem;
+      height: 2.5rem;
     }
 
     @include hover-query {
@@ -184,8 +293,28 @@
       }
     }
 
+    // watchcard__btn 內的 <i> tag
     i {
-      @include text(xl);
+      @include md {
+        @include text(lg);
+      }
+    }
+
+    // 除了第一個 watchcard__btn 外，其餘的每個元素套用以下樣式
+    &:not(:first-child) {
+      border-left: 1px solid;
+      @include md {
+        border-left: 0;
+      }
+    }
+
+    // watchcard icon
+    i {
+      @include text(sm);
+      font-weight: bold;
+      @include md {
+        @include text(lg);
+      }
     }
   }
 }
