--- a/src/scss/components/_Header.scss
+++ b/src/scss/components/_Header.scss
@@ -6,7 +6,6 @@
   z-index: 30;
   padding-left: deep-map-get($x-spacing, lg);
   padding-right: deep-map-get($x-spacing, lg);
-  flex: 1 0 auto;
   width: 100%;
   height: deep-map-get($height, header, lg);
   transition: map-get($transition, 800);
@@ -39,7 +38,7 @@
   }
 
   &__logo {
-    @include text(3xl);
+    @include text(2xl);
     white-space: nowrap;
     font-weight: bold;
     color: map-get($color, tertiary);
@@ -74,35 +73,27 @@
   position: relative;
   flex: 1 0 auto;
   column-gap: 1.5rem;
-  margin-left: 3.5rem;
-
-  // breakpoint md 以下
+  margin-left: 3rem;
   @include md {
     opacity: 0;
     visibility: hidden;
-
     position: fixed;
     top: deep-map-get($height, header, lg);
     left: 0;
     z-index: 5;
-
     width: 100%;
     height: 100vh;
-
     flex-direction: column;
     align-items: center;
     justify-content: center;
     row-gap: 2.5rem;
-
     padding: 3rem 0;
     margin-left: auto;
     margin-right: auto;
-
     background-color: rgba(0, 0, 0, 0.8);
     transition: map-get($transition, 800);
     transition-property: visibility, opacity;
-
-    // 將 nav 的所有直系子層(.nav__link) 設定 nav 開啟前的樣式
+    // 將 nav 的所有直接子層(.nav__link) 設定 nav 開啟前的樣式
     @for $i from 1 through 6 {
       & > :nth-child(#{$i}) {
         opacity: 0;
@@ -112,7 +103,6 @@
       }
     }
   }
-
   @include sm {
     top: deep-map-get($height, header, sm);
   }
@@ -121,8 +111,7 @@
     @include md {
       opacity: 1;
       visibility: visible;
-
-      // 將 nav 的所有直系子層(.nav__link) 設定 nav 開啟後的樣式
+      // 將 nav 的所有直接子層(.nav__link) 設定 nav 開啟後的樣式
       @for $i from 1 through 6 {
         & > :nth-child(#{$i}) {
           opacity: 1;
@@ -155,7 +144,6 @@
       color: map-get($color, primary);
       background-color: map-get($color, tertiary);
     }
-
     @include md {
       @include text(xl);
       opacity: 0;
@@ -169,6 +157,7 @@
         &::before {
           opacity: 1;
           transform: scaleX(1);
+          box-shadow: 0 0 13px 4px rgb(213 108 80);
         }
       }
     }
@@ -177,7 +166,8 @@
     &::before {
       content: "";
       position: absolute;
-      bottom: -0.375rem;
+      // bottom: -0.375rem;
+      bottom: -7px;
       width: 100%;
       height: 0.125rem;
       transform: scaleX(0);
@@ -186,17 +176,18 @@
       transition-property: transform;
       background-color: map-get($color, tertiary);
     }
-
+    // link 下方底線 active 狀態
     &.active {
       &::before {
         transform: scaleX(1);
         background-color: map-get($color, tertiary);
+        box-shadow: 0 0 13px 4px rgb(213 108 80);
       }
     }
 
+    // 從最後數過來倒數第二個項目(watchlist)
     &:nth-last-child(2) {
       margin-left: auto;
-
       @include md {
         margin-left: 0;
       }
